@@ -1,6 +1,8 @@
 2010-04-16 Homer Xing <homer.xing@gmail.com>
 
     * Implement "Fastest repository" pane for Fedora.
+    * Fix bug: If netbeans 6.5 is installed, then "Netbeans 6.8" item is displayed as installed. (issue 47)
+    * Fix bug: If TeXLive 2007 is installed, then "TeXLive" item is not displayed as installed. (issue 47)
 
 2010-04-16 HUANG Wei <wei.kukey@gmail.com>
 
